Changing default title

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       }
     }, 1000);
   } else {
-    document.getElementById("title").innerHTML = "Not a valid transaction hash"
+    document.getElementById("title").innerHTML = "Check transaction hash"
     document.getElementById("txInput").style.display = "block";
   }
 
